--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "^3.1.10"
+    "mongodb": "^3.1.10",
+    "mongoose": "^5.3.16",
+    "validator": "^13.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.9"
   }
 }
